float_eq/tests/derive_tests/ulps_epsilon/ulps_epsilon_enum.stderr
error: FloatEqUlpsEpsilon may only be derived for structs.
 --> $DIR/ulps_epsilon_enum.rs:4:6
  |
4 | enum SomeEnum {
  |      ^^^^^^^^
