float_eq/tests/derive_tests/ulps_epsilon/ulps_epsilon_enum.rs
use float_eq::FloatEqUlpsEpsilon;

#[derive(Clone, Copy, Debug, PartialEq, PartialOrd, FloatEqUlpsEpsilon)]
enum SomeEnum {
    Float(f32),
    Double(f64),
}

fn main() {}
